--- a/sections/summer_school.html
+++ b/sections/summer_school.html
@@ -225,7 +225,7 @@
     <!-- Footer Section -->
     <footer class="footer">
       <div class="container">
-        <p>&copy; 2025 Conference Theme. All rights reserved.</p>
+        <p>&copy; MAC-MIGS: Summer School on Numerical Analysis. All rights reserved.</p>
       </div>
     </footer>
 
