--- a/sections/about.html
+++ b/sections/about.html
@@ -9,7 +9,7 @@
 <body>
   <header class="hero">
     <div class="hero-content">
-      <h1>MAC-MIGS: Summer School on Numerical PDEs</h1>
+      <h1>MAC-MIGS Summer School on Numerical PDEs</h1>
       <h1>June 17th to 20th, 2025</h1>
     </div>
   </header>
@@ -51,14 +51,12 @@
       <div class="organizers">
 
         <div class="organizer">
-          <img src="../images/ana.jpeg" alt="Speaker 1">
+          <img src="../images/ana_cropped.jpeg" alt="Speaker 1">
           <h3>Anastasia Istratuca</h3>
           <p>PhD Student at the Maxwell Institute</p>
           <p>University of Edinburgh</p>
 
         </div>
-
-
 
         <div class="organizer">
           <img src="../images/Pearson_MAC-MIGS.jpg" alt="Speaker 1">
@@ -77,7 +75,7 @@
         </div>
 
         <div class="organizer">
-          <img src="../images/simon.jpeg" alt="Speaker 1">
+          <img src="../images/simon_cropped.jpeg" alt="Speaker 1">
           <h3>Simon Urbainczyk</h3>
           <p>PhD Student at the Maxwell Institute</p>
           <p>Heriot-Watt University</p>        
@@ -136,7 +134,7 @@
     <!-- Footer Section -->
     <footer class="footer">
       <div class="container">
-        <p>&copy; MAC-MIGS: Summer School on Numerical Analysis. All rights reserved.</p>
+        <p>&copy; MAC-MIGS Summer School on Numerical Analysis. All rights reserved.</p>
       </div>
     </footer>
 
