add speaker names to schedule, other minor fixes

--- a/sections/contact.html
+++ b/sections/contact.html
@@ -9,7 +9,7 @@
 <body>
   <header class="hero">
     <div class="hero-content">
-      <h1>MAC-MIGS: Summer School on Numerical PDEs</h1>
+      <h1>MAC-MIGS Summer School on Numerical PDEs</h1>
       <h1>June 17th to 20th, 2025</h1>
     </div>
   </header>
@@ -17,7 +17,7 @@
   <!-- Navigation Bar -->
   <nav class="navbar">
     <ul class="nav-links">
-      <li><a href="about.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
       <li><a href="summer_school.html">Summer School</a></li>
       <li><a href="register.html">Registration</a></li>
       <li><a href="contact.html">Contact</a></li>
@@ -37,7 +37,7 @@
     <!-- Footer Section -->
     <footer class="footer">
       <div class="container">
-        <p>&copy; MAC-MIGS: Summer School on Numerical Analysis. All rights reserved.</p>
+        <p>&copy; MAC-MIGS Summer School on Numerical Analysis. All rights reserved.</p>
       </div>
     </footer>
 
