--- a/sections/information.html
+++ b/sections/information.html
@@ -9,7 +9,7 @@
 <body>
   <header class="hero">
     <div class="hero-content">
-      <h1>MAC-MIGS: Summer School on Numerical PDEs</h1>
+      <h1>MAC-MIGS Summer School on Numerical PDEs</h1>
       <h1>June 17th to 20th, 2025</h1>
     </div>
   </header>
@@ -17,7 +17,7 @@
   <!-- Navigation Bar -->
   <nav class="navbar">
     <ul class="nav-links">
-      <li><a href="about.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
       <li><a href="summer_school.html">Summer School</a></li>
       <li><a href="register.html">Registration</a></li>
       <li><a href="contact.html">Contact</a></li>
@@ -32,7 +32,10 @@
 
       <div class="content-wrapper">
         <div class="text-content">
-          <p>
+  
+		  <p>The event will take place at: <br> JCMB <br> Mayfield Rd <br> Edinburgh EH9 3FD <br> United Kingdom</p>
+          
+		  <p>
            There is a shuttle bus from ...
           </p>
         </div>
@@ -48,16 +51,10 @@
     <!-- Accomodation Section -->
     <section id="accomodation" class="section">
       <div class="accomodation-container">
-        <h2>Accomodation</h2>
+        <h2>Accommodation</h2>
   
-        <p>With the aid of existing research and computer simulations, there are now very powerful numerical tools to solve PDEs. However, many challenges still remain, particularly in the era of data science and high-performance computing. Hence, the summer school will focus on the following topics:</p>
-  
-        <ul>
-          <li>Data Assimilation</li>
-          <li>High-Dimensional PDEs</li>
-          <li>Scientific Machine Learning</li>
-          <li>PDE-Constrained Optimization</li>
-        </ul>
+        <p>There will be information on accommodation here...</p>
+		
      </div>
     </section>
   
@@ -67,7 +64,7 @@
     <!-- Footer Section -->
     <footer class="footer">
       <div class="container">
-        <p>&copy; MAC-MIGS: Summer School on Numerical Analysis. All rights reserved.</p>
+        <p>&copy; MAC-MIGS Summer School on Numerical Analysis. All rights reserved.</p>
       </div>
     </footer>
 
