--- a/sections/summer_school.html
+++ b/sections/summer_school.html
@@ -9,7 +9,7 @@
 <body>
   <header class="hero">
     <div class="hero-content">
-      <h1>MAC-MIGS: Summer School on Numerical PDEs</h1>
+      <h1>MAC-MIGS Summer School on Numerical PDEs</h1>
       <h1>June 17th to 20th, 2025</h1>
     </div>
   </header>
@@ -17,7 +17,7 @@
   <!-- Navigation Bar -->
   <nav class="navbar">
     <ul class="nav-links">
-      <li><a href="about.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
       <li><a href="summer_school.html">Summer School</a></li>
       <li><a href="register.html">Registration</a></li>
       <li><a href="contact.html">Contact</a></li>
@@ -58,7 +58,7 @@
             <img src="../images/catherine.jpg" alt="Speaker 1">
             <h3>Prof. Catherine Powell</h3>
             <h3>Univeristy of Manchester</h3>
-            <p>Topic: High-PDEs</p>
+            <p>Topic: High-Dimensional PDEs</p>
           </div>
         </a>
 
@@ -68,7 +68,7 @@
             <img src="../images/Fabio.jpg" alt="Speaker 2">
             <h3>Prof. Fabio Nobile</h3>
             <h3>EPFL</h3>
-            <p>Topic: High-PDEs</p>
+            <p>Topic: High-Dimensional PDEs</p>
           </div>
         </a>
 
@@ -95,7 +95,7 @@
             <img src="../images/roland.jpg" alt="Speaker 2">
             <h3>Prof. Roland Herzog</h3>
             <h3>University of Heidelberg</h3>
-            <p>Topic: PDE-Constrained</p>
+            <p>Topic: PDE-Constrained Optimization</p>
           </div>
         </a>
 
@@ -104,14 +104,14 @@
             <img src="../images/estefania.jpg" alt="Speaker 2">
             <h3>Dr. Estefania L. Romero</h3>
             <h3>University of Heidelberg</h3>
-            <p>Topic: PDE-Constrained</p>
+            <p>Topic: PDE-Constrained Optimization</p>
           </div>
         </a>
         
         <a href="http://dewiljes-lab.com/" target="_blank">
           <div class="speaker">
             <img src="../images/jana.jpg" alt="Speaker 2">
-            <h3>Dr. Jana de Wiljes</h3>
+            <h3>Prof. Jana de Wiljes</h3>
             <h3>University of Potsdam</h3>
             <p>Topic: Data Assimilation</p>
           </div>
@@ -153,7 +153,7 @@
             <th>Topic</th>
             <th>High-Dimensional PDEs</th>
             <th>Scientific ML</th>
-            <th>Optimization</th>
+            <th>PDE-Constr. Optimization</th>
             <th>Data Assimilation</th>
           </tr>
         </thead>
@@ -163,9 +163,9 @@
           <tr>
             <td>09:00 - 10:30</td>
             <td>-</td>
-            <td>Speaker 3</td>
-            <td>Speaker 5</td>
-            <td>Speaker 7</td>
+            <td>Andrew Stuart</td>
+            <td>Roland Herzog</td>
+            <td>Jana de Wiljes</td>
           </tr>
           <tr>
             <td>10:30 - 11:00</td>
@@ -174,10 +174,10 @@
           </tr>
           <tr>
             <td>11:00 - 12:00</td>
-            <td>Speaker 1</td>
-            <td>Speaker 3</td>
-            <td>Speaker 5</td>
-            <td>Speaker 7</td>
+            <td>Catherine Powell</td>
+            <td>Andrew Stuart</td>
+            <td>Roland Herzog</td>
+            <td>Jana de Wiljes</td>
           </tr>
 
           <tr>
@@ -190,10 +190,10 @@
 
           <tr>
             <td>13:30 - 15:00</td>
-            <td>Speaker 1</td>
-            <td>Speaker 4</td>
-            <td>Speaker 6</td>
-            <td>Speaker 8</td>
+            <td>Catherine Powell</td>
+            <td>Antonio Vergari</td>
+            <td>Estefania L. Romero</td>
+            <td>Heikki Haario</td>
           </tr>
 
           <tr>
@@ -204,7 +204,7 @@
 
           <tr>
             <td>15:30 - 17:00</td>
-            <td>Speaker 1</td>
+            <td>Fabio Nobile</td>
             <td>-</td>
             <td>ECR Talks</td>
             <td>-</td>
@@ -225,7 +225,7 @@
     <!-- Footer Section -->
     <footer class="footer">
       <div class="container">
-        <p>&copy; MAC-MIGS: Summer School on Numerical Analysis. All rights reserved.</p>
+        <p>&copy; MAC-MIGS Summer School on Numerical Analysis. All rights reserved.</p>
       </div>
     </footer>
 
