--- a/sections/about.html
+++ b/sections/about.html
@@ -101,28 +101,42 @@
         <a href="https://www.mac-migs.ac.uk/" target="_blank">
           <div class="sponsor">
             <img src="../images/MAC-MIGS.png" alt="MAC-MIGS Logo">
-            <h3>MAC-MIGS</h3>
+             <!--<h3>MAC-MIGS</h3>-->
           </div>
         </a>
 
         <a href="https://www.gmjtrust.org/home" target="_blank">
           <div class="sponsor">
             <img src="../images/GMJT.jpg" alt="GMJT Logo">
-            <h3>GMJT</h3>
+            <!-- <h3>GMJT</h3>-->
           </div>
         </a>
 
         <a href="https://www.probai.uk/" target="_blank">
           <div class="sponsor">
             <img src="../images/probai.png" alt="ProbAI Logo">
-            <h3>ProbAI</h3>
+             <!--<h3>ProbAI</h3>-->
           </div>
         </a>
 
         <a href="https://heilbronn.ac.uk/" target="_blank">
           <div class="sponsor">
             <img src="../images/Heilbronn-Landscape-Logo_100.png" alt="heilbronn Logo">
-            <h3>Heilbronn Institute</h3>
+            <!-- <h3>Heilbronn Institute</h3>-->
+          </div>
+        </a>
+
+        <a href="https://www.ukri.org/" target="_blank">
+          <div class="sponsor">
+            <img src="../images/UKRI.png" alt="heilbronn Logo">
+             <!--<h3>UK Research and Innovation</h3>-->
+          </div>
+        </a>
+
+        <a href="https://www.ems.ac.uk/" target="_blank">
+          <div class="sponsor">
+            <img src="../images/ems-logo.svg" alt="heilbronn Logo">
+             <!--<h3>UK Research and Innovation</h3>-->
           </div>
         </a>
 
