fill in more information

--- a/sections/information.html
+++ b/sections/information.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Summer School on Numerical Analysis</title>
+  <title>Summer School on Numerical PDEs: A MAC-MIGS summer school</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header class="hero">
     <div class="hero-content">
-      <h1>MAC-MIGS Summer School on Numerical PDEs</h1>
+      <h1>Summer School on Numerical PDEs:<br>A MAC-MIGS summer school</h1>
       <h1>June 17th to 20th, 2025</h1>
     </div>
   </header>
@@ -64,7 +64,7 @@
     <!-- Footer Section -->
     <footer class="footer">
       <div class="container">
-        <p>&copy; MAC-MIGS Summer School on Numerical Analysis. All rights reserved.</p>
+        <p>&copy; Summer School on Numerical PDEs. All rights reserved.</p>
       </div>
     </footer>
 
