--- a/sections/summer_school.html
+++ b/sections/summer_school.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Summer School on Numerical Analysis</title>
+  <title>Summer School on Numerical PDEs: A MAC-MIGS summer school</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header class="hero">
     <div class="hero-content">
-      <h1>MAC-MIGS Summer School on Numerical PDEs</h1>
+      <h1>Summer School on Numerical PDEs:<br>A MAC-MIGS summer school</h1>
       <h1>June 17th to 20th, 2025</h1>
     </div>
   </header>
@@ -57,11 +57,10 @@
           <div class="speaker">
             <img src="../images/catherine.jpg" alt="Speaker 1">
             <h3>Prof. Catherine Powell</h3>
-            <h3>Univeristy of Manchester</h3>
+            <h3>University of Manchester</h3>
             <p>Topic: High-Dimensional PDEs</p>
           </div>
         </a>
-
 
         <a href="https://people.epfl.ch/fabio.nobile" target="_blank">
           <div class="speaker">
@@ -103,7 +102,7 @@
           <div class="speaker">
             <img src="../images/estefania.jpg" alt="Speaker 2">
             <h3>Dr. Estefania L. Romero</h3>
-            <h3>University of Heidelberg</h3>
+            <h3>Imperial College London</h3>
             <p>Topic: PDE-Constrained Optimization</p>
           </div>
         </a>
@@ -112,7 +111,7 @@
           <div class="speaker">
             <img src="../images/jana.jpg" alt="Speaker 2">
             <h3>Prof. Jana de Wiljes</h3>
-            <h3>University of Potsdam</h3>
+            <h3>Technical University Ilmenau</h3>
             <p>Topic: Data Assimilation</p>
           </div>
         </a>
@@ -121,8 +120,8 @@
           <div class="speaker">
             <img src="../images/Heikki-Haario.jpg" alt="Speaker 2">
             <h3>Prof. Heikki Haario</h3>
-            <h3>Lappeenranta University of Technology</h3>
-            <p>Topic:  Data Assimilation</p>
+            <h3>LUT University</h3>
+            <p>Topic: Data Assimilation</p>
           </div>
         </a>
 
@@ -225,7 +224,7 @@
     <!-- Footer Section -->
     <footer class="footer">
       <div class="container">
-        <p>&copy; MAC-MIGS Summer School on Numerical Analysis. All rights reserved.</p>
+        <p>&copy; Summer School on Numerical PDEs. All rights reserved.</p>
       </div>
     </footer>
 
