--- a/sections/about.html
+++ b/sections/about.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Summer School on Numerical Analysis</title>
+  <title>Summer School on Numerical PDEs: A MAC-MIGS summer school</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header class="hero">
     <div class="hero-content">
-      <h1>MAC-MIGS Summer School on Numerical PDEs</h1>
+      <h1>Summer School on Numerical PDEs:<br>A MAC-MIGS summer school</h1>
       <h1>June 17th to 20th, 2025</h1>
     </div>
   </header>
@@ -51,7 +51,7 @@
       <div class="organizers">
 
         <div class="organizer">
-          <img src="../images/ana_cropped.jpeg" alt="Speaker 1">
+          <img src="../images/ana_cropped.jpeg" alt="Organiser Picture">
           <h3>Anastasia Istratuca</h3>
           <p>PhD Student at the Maxwell Institute</p>
           <p>University of Edinburgh</p>
@@ -59,7 +59,7 @@
         </div>
 
         <div class="organizer">
-          <img src="../images/Pearson_MAC-MIGS.jpg" alt="Speaker 1">
+          <img src="../images/Pearson_MAC-MIGS.jpg" alt="Organiser Picture">
           <h3>Prof John Pearson</h3>
           <p>Professor in the School of Mathematics</p>
           <p>University of Edinburgh</p>        
@@ -67,7 +67,7 @@
         </div>
 
         <div class="organizer">
-          <img src="../images/ateckentrup2.jpg" alt="Speaker 1">
+          <img src="../images/ateckentrup2.jpg" alt="Organiser Picture">
           <h3>Dr Aretha Teckentrup</h3>
           <p>Reader in the School of Mathematics</p>
           <p>University of Edinburgh</p>        
@@ -75,14 +75,14 @@
         </div>
 
         <div class="organizer">
-          <img src="../images/simon_cropped.jpeg" alt="Speaker 1">
+          <img src="../images/simon2.jpg" alt="Organiser Picture">
           <h3>Simon Urbainczyk</h3>
           <p>PhD Student at the Maxwell Institute</p>
           <p>Heriot-Watt University</p>        
         </div>
 
         <div class="organizer">
-          <img src="../images/chr.jpg" alt="Speaker 1">
+          <img src="../images/chr.jpg" alt="Organiser Picture">
           <h3>Christian Jimenez Beltran</h3>
           <p>PhD Student at the Maxwell Institute</p>
           <p>University of Edinburgh</p>        
@@ -97,7 +97,6 @@
     <div class="sponsors-container">
       <h2>Sponsors</h2>
       <div class="sponsors">
-
         <a href="https://www.mac-migs.ac.uk/" target="_blank">
           <div class="sponsor">
             <img src="../images/MAC-MIGS.png" alt="MAC-MIGS Logo">
@@ -118,7 +117,9 @@
              <!--<h3>ProbAI</h3>-->
           </div>
         </a>
+      </div>
 
+      <div class="sponsors">
         <a href="https://heilbronn.ac.uk/" target="_blank">
           <div class="sponsor">
             <img src="../images/Heilbronn-Landscape-Logo_100.png" alt="heilbronn Logo">
@@ -128,27 +129,26 @@
 
         <a href="https://www.ukri.org/" target="_blank">
           <div class="sponsor">
-            <img src="../images/UKRI.png" alt="heilbronn Logo">
+            <img src="../images/UKRI.png" alt="Heilbronn Logo">
              <!--<h3>UK Research and Innovation</h3>-->
           </div>
         </a>
 
         <a href="https://www.ems.ac.uk/" target="_blank">
           <div class="sponsor">
-            <img src="../images/ems-logo.svg" alt="heilbronn Logo">
+            <img src="../images/ems-logo.svg" alt="EMS Logo">
              <!--<h3>UK Research and Innovation</h3>-->
           </div>
         </a>
 
-
-     </div>
+      </div>
    </div>
   </section>
 
     <!-- Footer Section -->
     <footer class="footer">
       <div class="container">
-        <p>&copy; MAC-MIGS Summer School on Numerical Analysis. All rights reserved.</p>
+        <p>&copy; Summer School on Numerical PDEs. All rights reserved.</p>
       </div>
     </footer>
 
