--- a/sections/register.html
+++ b/sections/register.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Summer School on Numerical Analysis</title>
+  <title>Summer School on Numerical PDEs: A MAC-MIGS summer school</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header class="hero">
     <div class="hero-content">
-      <h1>MAC-MIGS Summer School on Numerical PDEs</h1>
+      <h1>Summer School on Numerical PDEs:<br>A MAC-MIGS summer school</h1>
       <h1>June 17th to 20th, 2025</h1>
     </div>
   </header>
@@ -28,15 +28,22 @@
   <!-- Register Section -->
   <section id="register" class="section">
     <div class="container">
+      <h2>Travel and child care support</h2>
+      <p>Limited funding is available to cover accommodation and travel expenses. To qualify, you need to be an early-career researcher, and be affiliated to an institution in the UK or the EU. To apply, please let us know during registration and send your CV to <a href="mailto:npde25@maths.ed.ac.uk">npde25@maths.ed.ac.uk</a>.</p>
+      <p>A portion of our funding is dedicated to covering child care costs incurred while attending the summer school. Please indicate during the registration process whether you'd like to apply for support.</p>
+      
       <h2>Registration</h2>
-      <h2>Coming Soon</h2>
+      <p>Please register via this form:
+        <br>
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSdgdzJhrTHCOkEom6Kq9bahwct2P57McXYVJ3BV2oTUkwXyAw/viewform?usp=dialog">https://docs.google.com/forms/d/e/1FAIpQLSdgdzJhrTHCOkEom6Kq9bahwct2P57McXYVJ3BV2oTUkwXyAw/viewform?usp=dialog</a>
+      </p>
     </div>
   </section>
 
     <!-- Footer Section -->
     <footer class="footer">
       <div class="container">
-        <p>&copy; MAC-MIGS Summer School on Numerical Analysis. All rights reserved.</p>
+        <p>&copy; Summer School on Numerical PDEs. All rights reserved.</p>
       </div>
     </footer>
 
