add further comments from email

--- a/sections/register.html
+++ b/sections/register.html
@@ -29,7 +29,8 @@
   <section id="register" class="section">
     <div class="container">
       <h2>Travel and child care support</h2>
-      <p>Limited funding is available to cover accommodation and travel expenses. To qualify, you need to be an early-career researcher, and be affiliated to an institution in the UK or the EU. To apply, please let us know during registration and send your CV to <a href="mailto:npde25@maths.ed.ac.uk">npde25@maths.ed.ac.uk</a>.</p>
+      <p>Limited funding is available to cover accommodation and travel expenses. To qualify, you need to be an early-career researcher, and be affiliated to an institution in the UK or the EU.
+      To apply, please let us know during registration and send your CV and a short motivation to <a href="mailto:npde25@maths.ed.ac.uk">npde25@maths.ed.ac.uk</a>.</p>
       <p>A portion of our funding is dedicated to covering child care costs incurred while attending the summer school. Please indicate during the registration process whether you'd like to apply for support.</p>
       
       <h2>Registration</h2>
@@ -37,6 +38,9 @@
         <br>
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSdgdzJhrTHCOkEom6Kq9bahwct2P57McXYVJ3BV2oTUkwXyAw/viewform?usp=dialog">https://docs.google.com/forms/d/e/1FAIpQLSdgdzJhrTHCOkEom6Kq9bahwct2P57McXYVJ3BV2oTUkwXyAw/viewform?usp=dialog</a>
       </p>
+      
+      <h2>Conference dinner</h2>
+      <p>The conference dinner is not covered by registration fees. The cost to attend will be £40-£50 (TBC).</p>
     </div>
   </section>
 
