--- a/sections/summer_school.html
+++ b/sections/summer_school.html
@@ -130,7 +130,6 @@
     </div>
   </section>
 
-
   <!-- Schedule Section -->
   <section id="schedule" class="section">
     <div class="schedule-container">
@@ -221,13 +220,21 @@
     </div>
   </section>
 
-    <!-- Footer Section -->
-    <footer class="footer">
-      <div class="container">
-        <p>&copy; Summer School on Numerical PDEs. All rights reserved.</p>
-      </div>
-    </footer>
+  <!-- Abstracts Section -->
+  <section id="abstracts" class="section">
+    <div class="container">
+      <h2>Abstracts</h2>
+      <p>This is where the abstracts will go.</p> 
 
+    </div>
+  </section>
+
+  <!-- Footer Section -->
+  <footer class="footer">
+    <div class="container">
+      <p>&copy; Summer School on Numerical PDEs. All rights reserved.</p>
+    </div>
+  </footer>
 
 </body>
 </html>
