throw in information to be addressed

--- a/sections/information.html
+++ b/sections/information.html
@@ -46,27 +46,26 @@
     </div>
   </section>
 
+  <!-- Accomodation Section -->
+  <section id="accomodation" class="section">
+    <div class="accomodation-container">
+      <h2>Accommodation</h2>
 
-
-    <!-- Accomodation Section -->
-    <section id="accomodation" class="section">
-      <div class="accomodation-container">
-        <h2>Accommodation</h2>
+      <p>There will be information on accommodation here...</p>
+      
+      <p>Things to mention on this page:
+        bus or tram to take from the airport to the city centre, which buses go to King's, some hotels around the Cameron Toll area, which would be closest to JCMB, good places to visit in Edinburgh, suggestions for dinner, room and location for catering
+      </p>
   
-        <p>There will be information on accommodation here...</p>
-		
-     </div>
-    </section>
-  
+   </div>
+  </section>
 
-
-
-    <!-- Footer Section -->
-    <footer class="footer">
-      <div class="container">
-        <p>&copy; Summer School on Numerical PDEs. All rights reserved.</p>
-      </div>
-    </footer>
+  <!-- Footer Section -->
+  <footer class="footer">
+    <div class="container">
+      <p>&copy; Summer School on Numerical PDEs. All rights reserved.</p>
+    </div>
+  </footer>
 
 </body>
 </html>
