adjust name of event, add UoE in subtitle

--- a/sections/about.html
+++ b/sections/about.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Summer School on Numerical PDEs: A MAC-MIGS summer school</title>
+  <title>Numerical analysis of PDEs, optimisation and UQ: A MAC-MIGS summer school</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header class="hero">
     <div class="hero-content">
-      <h1>Summer School on Numerical PDEs:<br>A MAC-MIGS summer school</h1>
-      <h1>June 17th to 20th, 2025</h1>
+      <h1>Numerical analysis of PDEs, optimisation and UQ:<br>A MAC-MIGS summer school</h1>
+      <h2>University of Edinburgh, June 17th to 20th 2025</h2>
     </div>
   </header>
 
@@ -148,10 +148,9 @@
     <!-- Footer Section -->
     <footer class="footer">
       <div class="container">
-        <p>&copy; Summer School on Numerical PDEs. All rights reserved.</p>
+        <p>&copy; Numerical analysis of PDEs, optimisation and UQ: A MAC-MIGS summer school. All rights reserved.</p>
       </div>
     </footer>
 
 </body>
 </html>
-
