register button update

--- a/sections/register.html
+++ b/sections/register.html
@@ -36,7 +36,11 @@
       <h2>Registration</h2>
       <p>Please register via this form:
         <br>
-        <a href="https://docs.google.com/forms/d/e/1FAIpQLSdgdzJhrTHCOkEom6Kq9bahwct2P57McXYVJ3BV2oTUkwXyAw/viewform?usp=dialog">https://docs.google.com/forms/d/e/1FAIpQLSdgdzJhrTHCOkEom6Kq9bahwct2P57McXYVJ3BV2oTUkwXyAw/viewform?usp=dialog</a>
+        <div class="btn-container">
+          <a href="https://docs.google.com/forms/d/e/1FAIpQLSdgdzJhrTHCOkEom6Kq9bahwct2P57McXYVJ3BV2oTUkwXyAw/viewform?usp=dialog" class="btn">
+            Register
+          </a>
+        </div>
       </p>
       
       <h2>Conference dinner</h2>
