make all sections use same container, open registration link in new tab

--- a/sections/contact.html
+++ b/sections/contact.html
@@ -26,7 +26,7 @@
   </nav>
   
   <!-- Contact Section -->
-  <section id="contact" class="section">
+  <section id="sec" class="section">
     <div class="container">
       <h2>Contact</h2>
       <p>For any questions, feel free to contact us at <a href="mailto:npde25@maths.ed.ac.uk">npde25@maths.ed.ac.uk</a>.</p> 
