--- a/sections/information.html
+++ b/sections/information.html
@@ -26,8 +26,8 @@
   </nav>
   
   <!-- Venue Section -->
-  <section id="venue" class="section">
-    <div class="accomodation-container">
+  <section id="sec" class="section">
+    <div class="container">
       <h2>Venue</h2>
 
       <p>The venue is located at...</p>
@@ -36,9 +36,9 @@
   </section>
 
   <!-- Arrive Section -->
-  <section id="arrive" class="section">
-    <div class="arrive-container">
-      <h2 class="section-title">How to get to James Clerk Maxwell Building</h2> <!-- Title aligned left -->
+  <section id="sec" class="section">
+    <div class="container">
+      <h2 class="section-title">How to get to James Clerk Maxwell Building</h2>
 
       <div class="content-wrapper">
         <div class="text-content">
@@ -88,8 +88,8 @@
   
  
   <!-- Accomodation Section -->
-  <section id="accomodation" class="section">
-    <div class="accomodation-container">
+  <section id="sec" class="section">
+    <div class="container">
       <h2>Accommodation and places to visit</h2>
 
       <p>There will be information on accommodation here...</p>
