--- a/sections/register.html
+++ b/sections/register.html
@@ -26,7 +26,7 @@
   </nav>
 
   <!-- Register Section -->
-  <section id="register" class="section">
+  <section id="sec" class="section">
     <div class="container">
       <h2>Travel and child care support</h2>
       <p>Limited funding is available to cover accommodation and travel expenses. To qualify, you need to be an early-career researcher, and be affiliated to an institution in the UK or the EU.
@@ -37,7 +37,7 @@
       <p>Please register via this form:
         <br>
         <div class="btn-container">
-          <a href="https://docs.google.com/forms/d/e/1FAIpQLSdgdzJhrTHCOkEom6Kq9bahwct2P57McXYVJ3BV2oTUkwXyAw/viewform?usp=dialog" class="btn">
+          <a href="https://docs.google.com/forms/d/e/1FAIpQLSdgdzJhrTHCOkEom6Kq9bahwct2P57McXYVJ3BV2oTUkwXyAw/viewform?usp=dialog" target="_blank" class="btn">
             Register
           </a>
         </div>
