--- a/sections/summer_school.html
+++ b/sections/summer_school.html
@@ -26,8 +26,8 @@
   </nav>
 
   <!-- School Section -->
-  <section id="school" class="section">
-    <div class="school-container">
+  <section id="sec" class="section">
+    <div class="container">
       <h2 class="section-title">The Summer School</h2> <!-- Title aligned left -->
 
       <div class="content-wrapper">
@@ -48,8 +48,8 @@
   </section>
 
   <!-- Speakers Section -->
-  <section id="speakers" class="section">
-    <div class="speakers-container">
+  <section id="sec" class="section">
+    <div class="container">
       <h2>Speakers</h2>
       <div class="speakers">
 
@@ -131,8 +131,8 @@
   </section>
 
   <!-- Schedule Section -->
-  <section id="schedule" class="section">
-    <div class="schedule-container">
+  <section id="sec" class="section">
+    <div class="container">
       <h2>Schedule</h2>
       <table class="schedule-table">
        
@@ -221,7 +221,7 @@
   </section>
 
   <!-- Abstracts Section -->
-  <section id="abstracts" class="section">
+  <section id="sec" class="section">
     <div class="container">
       <h2>Abstracts</h2>
       <p>This is where the abstracts will go.</p> 
