--- a/sections/about.html
+++ b/sections/about.html
@@ -26,8 +26,8 @@
   </nav>
 
   <!-- About Section -->
-  <section id="about" class="section">
-    <div class="about-container">
+  <section id="sec" class="section">
+    <div class="container">
       <h2>About the Summer School</h2>
       <p>Partial differential equations (PDEs) are ubiquitous in mathematical modeling. They have applications in a wide variety of fields, including engineering, climate modeling, medicine, chemistry, and nuclear reactors. Along with this wide range of applications comes a continued interest in the research community to make use of PDEs in their work.</p>
 
@@ -39,14 +39,13 @@
         <li>Scientific Machine Learning</li>
         <li>PDE-Constrained Optimization</li>
       </ul>
-   </div>
+    </div>
   </section>
 
 
-
   <!-- Organizing Comittee -->
-  <section id="comittee" class="section">
-    <div class="committee-container">
+  <section id="sec" class="section">
+    <div class="container">
       <h2>Organizing Committee</h2>
       <div class="organizers">
 
@@ -93,8 +92,8 @@
   </section>
 
   <!-- Sponsors Section -->
-  <section id="sponsor" class="section">
-    <div class="sponsors-container">
+  <section id="sec" class="section">
+    <div class="container">
       <h2>Sponsors</h2>
       <div class="sponsors">
         <a href="https://www.mac-migs.ac.uk/" target="_blank">
@@ -142,7 +141,7 @@
         </a>
 
       </div>
-   </div>
+    </div>
   </section>
 
     <!-- Footer Section -->
