--- a/sections/information.html
+++ b/sections/information.html
@@ -30,7 +30,8 @@
     <div class="container">
       <h2>Venue</h2>
 
-      <p>The venue is located at...</p>
+      <p>Room numbers TBC</p>
+      <p>Room for catering TBC</p>
   
    </div>
   </section>
@@ -48,8 +49,8 @@
         
         <p>To get to Edinburgh:
           <ul>
-            <li>By plane: Edinburgh Airport is connected to the city by bus (AirLink) and tram.</li>
-            <li>By train: The closest station is Edinburgh Waverley in the city centre.</li>
+            <li>By plane: Edinburgh has an international airport that is connected to the city centre by bus (AirLink) and tram.</li>
+            <li>By train: The closest train station is Edinburgh Waverley in the city centre. From there, you can reach the campus by bus.</li>
             <li>By car: The campus lies north of the Edinburgh Bypass (A720). Take the exit onto A701 and follow until Mayfield Road.</li>
           </ul>
         See also <a href="https://transport.ed.ac.uk/travelling-here/kings-buildings">https://transport.ed.ac.uk/travelling-here/kings-buildings</a> for transport information and a campus map.
@@ -95,8 +96,17 @@
       <p>There will be information on accommodation here...</p>
       
       <p>Things to mention on this page:
-        some hotels around the Cameron Toll area, which would be closest to JCMB, good places to visit in Edinburgh, suggestions for dinner, room and location for catering
+        some hotels around the Cameron Toll area, which would be closest to JCMB, suggestions for dinner
       </p>
+      <p>On Wednesday afternoon, we plan to go for a small tour of Edinburgh. In case you can't join/want to explore Edinburgh on your own, here are some suggestions:
+      </p>
+      <ul>
+      <li>The old town features the Royal Mile with Edinburgh castle on one end and Holyrood Palace on the other.</li>
+      <li>Located right next to the old town, Arthur's Seat offers great views of Edinburgh.</li>
+      <li>Blackford hill is part of a lovely park that is great for walks and located just west of the campus.</li>
+      <li>Craigmillar castle is the ruins of a castle that used to be outside of Edinburgh and is now conveniently close.</li>
+      <li>Edinburgh has lots of museums, most of which are free. Highlights include the National Museum of Scotland (similar to the British Museum), Surgeons' Hall (bizarre medical exposition), and the Edinburgh Museum (history of Edinburgh).</li>
+    </ul>
   
    </div>
   </section>
