--- a/sections/summer_school.html
+++ b/sections/summer_school.html
@@ -34,8 +34,9 @@
         <div class="text-content">
           <p>
             NPDE25 will take place during the week of June 17–20, 2025, in the James Clerk Maxwell Building of the University of Edinburgh 
-            (<a href="information.html">see practical information</a>).
-            The mornings will be devoted to introductory lectures, while more advanced topics will be presented in the afternoons. 
+            (see <a href="information.html">practical information</a>).
+            The mornings will be devoted to introductory lectures, while more advanced topics will be presented in the afternoons.
+            Lunch will be provided by the summer school.
             According to participants' availability, poster sessions will also be organized. Additionally, selected participants will be 
             chosen to give 30-minute talks about their research.
           </p>
