--- a/sections/register.html
+++ b/sections/register.html
@@ -44,7 +44,7 @@
       </p>
       
       <h2>Conference dinner</h2>
-      <p>The conference dinner is not covered by registration fees. The cost to attend will be £40-£50 (TBC).</p>
+      <p>While lunch is provided by the summer school, the conference dinner is not covered by registration fees. The cost to attend will be £40-£50 (TBC).</p>
     </div>
   </section>
 
