another small fix

--- a/sections/information.html
+++ b/sections/information.html
@@ -105,7 +105,7 @@
       <li>Located right next to the old town, Arthur's Seat in Holyrood Park offers great views of Edinburgh.</li>
       <li>Blackford hill is part of a lovely park that is great for walks and located just west of the campus.</li>
       <li>Craigmillar castle is the ruins of a castle that used to be outside of Edinburgh and is now conveniently close.</li>
-      <li>Edinburgh has lots of museums, most of which are free. Highlights include the National Museum of Scotland (similar to the British Museum), Surgeons' Hall (bizarre medical exposition), and the Edinburgh Museum (history of Edinburgh).</li>
+      <li>Edinburgh has lots of museums, most of which are free. Highlights include the National Museum of Scotland (similar to the British Museum), Surgeons' Hall (bizarre medical exposition), and the Museum of Edinburgh (history of Edinburgh).</li>
     </ul>
   
    </div>
