--- a/sections/about.html
+++ b/sections/about.html
@@ -28,10 +28,15 @@
   <!-- About Section -->
   <section id="sec" class="section">
     <div class="container">
-      <h2>About the Summer School</h2>
-      <p>Partial differential equations (PDEs) are ubiquitous in mathematical modeling. They have applications in a wide variety of fields, including engineering, climate modeling, medicine, chemistry, and nuclear reactors. Along with this wide range of applications comes a continued interest in the research community to make use of PDEs in their work.</p>
+      <h2>About NPDE25</h2>
+      <p>Partial differential equations (PDEs) are ubiquitous in mathematical modeling.
+      They have applications in a wide variety of fields, including engineering, climate modeling, medicine, chemistry, and nuclear reactors.
+      Along with this wide range of applications comes a continued interest in the research community to make use of PDEs in their work.</p>
 
-      <p>With the aid of existing research and computer simulations, there are now very powerful numerical tools to solve PDEs. However, many challenges still remain, particularly in the era of data science and high-performance computing. Hence, the summer school will focus on the following topics:</p>
+      <p>With the aid of existing research and computer simulations, there are now very powerful numerical tools to solve PDEs.
+      However, many challenges still remain, particularly in the era of data science and high-performance computing.
+      This summer school aims to equip young researchers interested in this field with the skills and knowledge necessary to tackle some of the challenges in this area. 
+      On each day, the event will focus on one of these four topics:</p>
 
       <ul>
         <li>Data Assimilation</li>
