--- a/sections/summer_school.html
+++ b/sections/summer_school.html
@@ -28,17 +28,16 @@
   <!-- School Section -->
   <section id="sec" class="section">
     <div class="container">
-      <h2 class="section-title">The Summer School</h2> <!-- Title aligned left -->
+      <h2 class="section-title">Overview</h2> <!-- Title aligned left -->
 
       <div class="content-wrapper">
         <div class="text-content">
           <p>
-            NPDE25 will take place during the week of June 17–20, 2025, in the James Clerk Maxwell Building of the University of Edinburgh 
-            (see <a href="information.html">practical information</a>).
-            The mornings will be devoted to introductory lectures, while more advanced topics will be presented in the afternoons.
-            Lunch will be provided by the summer school.
-            According to participants' availability, poster sessions will also be organized. Additionally, selected participants will be 
-            chosen to give 30-minute talks about their research.
+            NPDE25 will take place June 17–20, 2025, in the James Clerk Maxwell Building of the University of Edinburgh 
+            (see <a href="information.html">Practical Information</a>).
+            The mornings will be devoted to introductory lectures, while more in-depth topics will be presented in the afternoons.
+            Lunch is provided on every day of the summer school.
+            Depending on participants' availability, a session of poster presentations and short research talks will be organised for Thursday afternoon.
           </p>
         </div>
         <div class="building">
@@ -225,7 +224,7 @@
   <section id="sec" class="section">
     <div class="container">
       <h2>Abstracts</h2>
-      <p>This is where the abstracts will go.</p> 
+      <p>TBC</p> 
 
     </div>
   </section>
