add dinner suggestions

--- a/sections/information.html
+++ b/sections/information.html
@@ -95,9 +95,9 @@
 
       <p>There will be information on accommodation here...</p>
       
-      <p>Things to mention on this page:
-        some hotels around the Cameron Toll area, which would be closest to JCMB, suggestions for dinner
+      <p>There's a bunch of great options for dinner in the area, including:<br>Wee Greek Kitchen, Haldi, Salisbury Arms, Old Bell Inn, Matto Pizza, Korean BBQ, Verdo, Sofia's Lounge, Brass Monkey, and Leslie's Bar.
       </p>
+      
       <p>On Wednesday afternoon, we plan to go for a small tour of Edinburgh. In case you can't join/want to explore Edinburgh on your own, here are some suggestions:
       </p>
       <ul>
@@ -106,9 +106,9 @@
       <li>Blackford hill is part of a lovely park that is great for walks and located just west of the campus.</li>
       <li>Craigmillar castle is the ruins of a castle that used to be outside of Edinburgh and is now conveniently close.</li>
       <li>Edinburgh has lots of museums, most of which are free. Highlights include the National Museum of Scotland (similar to the British Museum), Surgeons' Hall (bizarre medical exposition), and the Museum of Edinburgh (history of Edinburgh).</li>
-    </ul>
+      </ul>
   
-   </div>
+    </div>
   </section>
 
   <!-- Footer Section -->
