--- a/sections/information.html
+++ b/sections/information.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Numerical analysis of PDEs, optimisation and UQ: A MAC-MIGS summer school</title>
+  <title>Numerical Analysis of PDEs, Optimisation and UQ: A MAC-MIGS Summer School</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header class="hero">
     <div class="hero-content">
-      <h1>Numerical analysis of PDEs, optimisation and UQ:<br>A MAC-MIGS summer school</h1>
+      <h1>Numerical Analysis of PDEs, Optimisation and UQ:<br>A MAC-MIGS Summer School</h1>
       <h2>University of Edinburgh, June 17th to 20th 2025</h2>
     </div>
   </header>
@@ -45,13 +45,13 @@
         <div class="text-content">
   
         <p>The event will take place at JCMB on the King's Buildings campus.</p>
-        <p>The address is: <br> JCMB <br> Mayfield Rd <br> Edinburgh EH9 3FD <br> United Kingdom</p>
+        <p>The address is: <br> JCMB <br> Peter Guthrie Tait Road <br> Edinburgh EH9 3FD <br> United Kingdom</p>
         
         <p>To get to Edinburgh:
           <ul>
             <li>By plane: Edinburgh has an international airport that is connected to the city centre by bus (AirLink) and tram.</li>
             <li>By train: The closest train station is Edinburgh Waverley in the city centre. From there, you can reach the campus by bus.</li>
-            <li>By car: The campus lies north of the Edinburgh Bypass (A720). Take the exit onto A701 and follow until Mayfield Road.</li>
+            <li>By car: The campus lies north of the Edinburgh Bypass (A720). Take the exit onto A701 and follow until Mayfield Road. Turn left and follow until turning left again into Max Born Crescent. Follow until Peter Guthrie Tait Road.</li>
           </ul>
         See also <a href="https://transport.ed.ac.uk/travelling-here/kings-buildings">https://transport.ed.ac.uk/travelling-here/kings-buildings</a> for transport information and a campus map.
         </p>
@@ -101,11 +101,11 @@
       <p>On Wednesday afternoon, we plan to go for a small tour of Edinburgh. In case you can't join/want to explore Edinburgh on your own, here are some suggestions:
       </p>
       <ul>
-      <li>The old town features the Royal Mile with Edinburgh castle on one end and Holyrood Palace on the other.</li>
-      <li>Located right next to the old town, Arthur's Seat in Holyrood Park offers great views of Edinburgh.</li>
-      <li>Blackford hill is part of a lovely park that is great for walks and located just west of the campus.</li>
-      <li>Craigmillar castle is the ruins of a castle that used to be outside of Edinburgh and is now conveniently close.</li>
-      <li>Edinburgh has lots of museums, most of which are free. Highlights include the National Museum of Scotland (similar to the British Museum), Surgeons' Hall (bizarre medical exposition), and the Museum of Edinburgh (history of Edinburgh).</li>
+      <li>The Old Town features the Royal Mile with Edinburgh castle on one end and Holyrood Palace on the other.</li>
+      <li>Located right next to the Old Town, Arthur's Seat in Holyrood Park offers great views of Edinburgh.</li>
+      <li>Blackford Hill is part of a lovely park that is great for walks and located just west of the campus.</li>
+      <li>Craigmillar Castle is the ruins of a castle that used to be outside of Edinburgh and is now conveniently close.</li>
+      <li>Edinburgh has lots of museums, many of which are free. Highlights include the National Museum of Scotland (similar to the British Museum), Surgeons' Hall (bizarre medical exposition), and the Museum of Edinburgh (history of Edinburgh).</li>
       </ul>
   
     </div>
@@ -114,7 +114,7 @@
   <!-- Footer Section -->
   <footer class="footer">
     <div class="container">
-      <p>&copy; Numerical analysis of PDEs, optimisation and UQ: A MAC-MIGS summer school. All rights reserved.</p>
+      <p>&copy; Numerical Analysis of PDEs, Optimisation and UQ: A MAC-MIGS Summer School. All rights reserved.</p>
     </div>
   </footer>
 
