--- a/sections/register.html
+++ b/sections/register.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Numerical analysis of PDEs, optimisation and UQ: A MAC-MIGS summer school</title>
+  <title>Numerical Analysis of PDEs, Optimisation and UQ: A MAC-MIGS Summer School</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header class="hero">
     <div class="hero-content">
-      <h1>Numerical analysis of PDEs, optimisation and UQ:<br>A MAC-MIGS summer school</h1>
+      <h1>Numerical Analysis of PDEs, Optimisation and UQ:<br>A MAC-MIGS Summer School</h1>
       <h2>University of Edinburgh, June 17th to 20th 2025</h2>
     </div>
   </header>
@@ -28,10 +28,10 @@
   <!-- Register Section -->
   <section id="sec" class="section">
     <div class="container">
-      <h2>Travel and child care support</h2>
+      <h2>Travel and childcare support</h2>
       <p>Limited funding is available to cover accommodation and travel expenses. To qualify, you need to be an early-career researcher, and be affiliated to an institution in the UK or the EU.
       To apply, please let us know during registration and send your CV and a short motivation to <a href="mailto:npde25@maths.ed.ac.uk">npde25@maths.ed.ac.uk</a>.</p>
-      <p>A portion of our funding is dedicated to covering child care costs incurred while attending the summer school. Please indicate during the registration process whether you'd like to apply for support.</p>
+      <p>A portion of our funding is dedicated to covering childcare costs incurred while attending the summer school. Please indicate during the registration process whether you'd like to apply for support.</p>
       
       <h2>Registration</h2>
       <p>Please register via this form:
@@ -44,14 +44,14 @@
       </p>
       
       <h2>Conference dinner</h2>
-      <p>While lunch is provided by the summer school, the conference dinner is not covered by registration fees. The cost to attend will be £40-£50 (TBC).</p>
+      <p>While lunch is provided by the summer school, the conference dinner is not covered by registration fees. We anticipate the cost to attend to be £40-£50 (TBC).</p>
     </div>
   </section>
 
     <!-- Footer Section -->
     <footer class="footer">
       <div class="container">
-        <p>&copy; Numerical analysis of PDEs, optimisation and UQ: A MAC-MIGS summer school. All rights reserved.</p>
+        <p>&copy; Numerical Analysis of PDEs, Optimisation and UQ: A MAC-MIGS Summer School. All rights reserved.</p>
       </div>
     </footer>
 
