--- a/sections/summer_school.html
+++ b/sections/summer_school.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Numerical analysis of PDEs, optimisation and UQ: A MAC-MIGS summer school</title>
+  <title>Numerical Analysis of PDEs, Optimisation and UQ: A MAC-MIGS Summer School</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header class="hero">
     <div class="hero-content">
-      <h1>Numerical analysis of PDEs, optimisation and UQ:<br>A MAC-MIGS summer school</h1>
+      <h1>Numerical Analysis of PDEs, Optimisation and UQ:<br>A MAC-MIGS Summer School</h1>
       <h2>University of Edinburgh, June 17th to 20th 2025</h2>
     </div>
   </header>
@@ -232,7 +232,7 @@
   <!-- Footer Section -->
   <footer class="footer">
     <div class="container">
-      <p>&copy; Numerical analysis of PDEs, optimisation and UQ: A MAC-MIGS summer school. All rights reserved.</p>
+      <p>&copy; Numerical Analysis of PDEs, Optimisation and UQ: A MAC-MIGS Summer School. All rights reserved.</p>
     </div>
   </footer>
 
