--- a/sections/information.html
+++ b/sections/information.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Numerical Analysis of PDEs, Optimisation and UQ: A MAC-MIGS Summer School</title>
+  <title>Numerical Analysis of PDEs, Optimization and UQ: A MAC-MIGS Summer School</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header class="hero">
     <div class="hero-content">
-      <h1>Numerical Analysis of PDEs, Optimisation and UQ:<br>A MAC-MIGS Summer School</h1>
+      <h1>Numerical Analysis of PDEs, Optimization and UQ:<br>A MAC-MIGS Summer School</h1>
       <h2>University of Edinburgh, June 17th to 20th 2025</h2>
     </div>
   </header>
@@ -101,7 +101,7 @@
       <p>On Wednesday afternoon, we plan to go for a small tour of Edinburgh. In case you can't join/want to explore Edinburgh on your own, here are some suggestions:
       </p>
       <ul>
-      <li>The Old Town features the Royal Mile with Edinburgh castle on one end and Holyrood Palace on the other.</li>
+      <li>The Old Town features the Royal Mile with Edinburgh Castle on one end and Holyrood Palace on the other.</li>
       <li>Located right next to the Old Town, Arthur's Seat in Holyrood Park offers great views of Edinburgh.</li>
       <li>Blackford Hill is part of a lovely park that is great for walks and located just west of the campus.</li>
       <li>Craigmillar Castle is the ruins of a castle that used to be outside of Edinburgh and is now conveniently close.</li>
@@ -114,7 +114,7 @@
   <!-- Footer Section -->
   <footer class="footer">
     <div class="container">
-      <p>&copy; Numerical Analysis of PDEs, Optimisation and UQ: A MAC-MIGS Summer School. All rights reserved.</p>
+      <p>&copy; Numerical Analysis of PDEs, Optimization and UQ: A MAC-MIGS Summer School. All rights reserved.</p>
     </div>
   </footer>
 
