--- a/sections/summer_school.html
+++ b/sections/summer_school.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Numerical Analysis of PDEs, Optimisation and UQ: A MAC-MIGS Summer School</title>
+  <title>Numerical Analysis of PDEs, Optimization and UQ: A MAC-MIGS Summer School</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header class="hero">
     <div class="hero-content">
-      <h1>Numerical Analysis of PDEs, Optimisation and UQ:<br>A MAC-MIGS Summer School</h1>
+      <h1>Numerical Analysis of PDEs, Optimization and UQ:<br>A MAC-MIGS Summer School</h1>
       <h2>University of Edinburgh, June 17th to 20th 2025</h2>
     </div>
   </header>
@@ -71,15 +71,6 @@
           </div>
         </a>
 
-        <a href="https://people.epfl.ch/fabio.nobile" target="_blank">
-          <div class="speaker">
-            <img src="../images/Fabio.jpg" alt="Speaker 2">
-            <h3>Prof. Fabio Nobile</h3>
-            <h3>EPFL</h3>
-            <p>Topic: High-Dimensional PDEs</p>
-          </div>
-        </a>
-
         <a href="https://personalpages.manchester.ac.uk/staff/Catherine.Powell/" target="_blank">
           <div class="speaker">
             <img src="../images/catherine.jpg" alt="Speaker 1">
@@ -89,10 +80,11 @@
           </div>
         </a>
 
-        <a href="https://scoop.iwr.uni-heidelberg.de/team/eloayza/" target="_blank">
+        <!--<a href="https://scoop.iwr.uni-heidelberg.de/team/eloayza/" target="_blank">-->
+        <a href=" https://pureportal.strath.ac.uk/en/persons/karen-estefania-loayza-romero" target="_blank">
           <div class="speaker">
-            <img src="../images/estefania.jpg" alt="Speaker 2">
-            <h3>Dr. Estefania L. Romero</h3>
+            <img src="../images/estefanial.jpg" alt="Speaker 2">
+            <h3>Dr. Estefania Loayza R.</h3>
             <h3>Imperial College London</h3>
             <p>Topic: PDE-Constrained Optimization</p>
           </div>
@@ -115,8 +107,9 @@
             <p>Topic: Scientific ML</p>
           </div>
         </a>
-        
-        <a href="http://dewiljes-lab.com/" target="_blank">
+
+        <!--<a href="http://dewiljes-lab.com/" target="_blank">-->
+        <a href="https://www.tu-ilmenau.de/en/universitaet/fakultaeten/fakultaet-mathematik-und-naturwissenschaften/profil/institute-und-fachgebiete/institut-fuer-mathematik/profil/fachgebiet-mathematics-of-data-science/team/prof-dr-jana-de-wiljes" target="_blank">
           <div class="speaker">
             <img src="../images/jana.jpg" alt="Speaker 2">
             <h3>Prof. Jana de Wiljes</h3>
@@ -124,6 +117,15 @@
             <p>Topic: Data Assimilation</p>
           </div>
         </a>
+
+        <!--<a href="https://people.epfl.ch/fabio.nobile" target="_blank">
+          <div class="speaker">
+            <img src="../images/Fabio.jpg" alt="Speaker 2">
+            <h3>Prof. Fabio Nobile</h3>
+            <h3>EPFL</h3>
+            <p>Topic: High-Dimensional PDEs</p>
+          </div>
+        </a>-->
 
 
       </div>
@@ -202,7 +204,7 @@
 
           <tr>
             <td>15:30 - 17:00</td>
-            <td>Fabio Nobile</td>
+            <td>TBC</td>
             <td>-</td>
             <td>ECR Talks</td>
             <td>-</td>
@@ -232,7 +234,7 @@
   <!-- Footer Section -->
   <footer class="footer">
     <div class="container">
-      <p>&copy; Numerical Analysis of PDEs, Optimisation and UQ: A MAC-MIGS Summer School. All rights reserved.</p>
+      <p>&copy; Numerical Analysis of PDEs, Optimization and UQ: A MAC-MIGS Summer School. All rights reserved.</p>
     </div>
   </footer>
 
