--- a/sections/register.html
+++ b/sections/register.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Numerical Analysis of PDEs, Optimisation and UQ: A MAC-MIGS Summer School</title>
+  <title>Numerical Analysis of PDEs, Optimization and UQ: A MAC-MIGS Summer School</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header class="hero">
     <div class="hero-content">
-      <h1>Numerical Analysis of PDEs, Optimisation and UQ:<br>A MAC-MIGS Summer School</h1>
+      <h1>Numerical Analysis of PDEs, Optimization and UQ:<br>A MAC-MIGS Summer School</h1>
       <h2>University of Edinburgh, June 17th to 20th 2025</h2>
     </div>
   </header>
@@ -30,7 +30,7 @@
     <div class="container">
       <h2>Travel and childcare support</h2>
       <p>Limited funding is available to cover accommodation and travel expenses. To qualify, you need to be an early-career researcher, and be affiliated to an institution in the UK or the EU.
-      To apply, please let us know during registration and send your CV and a short motivation to <a href="mailto:npde25@maths.ed.ac.uk">npde25@maths.ed.ac.uk</a>.</p>
+      To apply, please let us know during registration and send your CV and a short motivation to <a href="mailto:npde25.summerschool@ed.ac.uk">npde25.summerschool@ed.ac.uk</a>.</p>
       <p>A portion of our funding is dedicated to covering childcare costs incurred while attending the summer school. Please indicate during the registration process whether you'd like to apply for support.</p>
       
       <h2>Registration</h2>
@@ -51,7 +51,7 @@
     <!-- Footer Section -->
     <footer class="footer">
       <div class="container">
-        <p>&copy; Numerical Analysis of PDEs, Optimisation and UQ: A MAC-MIGS Summer School. All rights reserved.</p>
+        <p>&copy; Numerical Analysis of PDEs, Optimization and UQ: A MAC-MIGS Summer School. All rights reserved.</p>
       </div>
     </footer>
 
