Small changes in speakers

--- a/sections/summer_school.html
+++ b/sections/summer_school.html
@@ -85,7 +85,7 @@
           <div class="speaker">
             <img src="../images/estefanial.jpg" alt="Speaker 2">
             <h3>Dr. Estefania Loayza R.</h3>
-            <h3>Imperial College London</h3>
+            <h3>University of Strathclyde</h3>
             <p>Topic: PDE-Constrained Optimization</p>
           </div>
         </a>
@@ -113,7 +113,7 @@
           <div class="speaker">
             <img src="../images/jana.jpg" alt="Speaker 2">
             <h3>Prof. Jana de Wiljes</h3>
-            <h3>Technical University Ilmenau</h3>
+            <h3>TU Ilmenau</h3>
             <p>Topic: Data Assimilation</p>
           </div>
         </a>
