Alison added to the speakers, deadlines and accomodation Highland cow

--- a/sections/summer_school.html
+++ b/sections/summer_school.html
@@ -71,6 +71,16 @@
           </div>
         </a>
 
+        <!--<a href="https://scoop.iwr.uni-heidelberg.de/team/eloayza/" target="_blank">-->
+        <a href=" https://pureportal.strath.ac.uk/en/persons/karen-estefania-loayza-romero" target="_blank">
+          <div class="speaker">
+            <img src="../images/estefanial.jpg" alt="Speaker 2">
+            <h3>Dr. Estefania Loayza R.</h3>
+            <h3>University of Strathclyde</h3>
+            <p>Topic: PDE-Constrained Optimization</p>
+          </div>
+        </a>
+
         <a href="https://personalpages.manchester.ac.uk/staff/Catherine.Powell/" target="_blank">
           <div class="speaker">
             <img src="../images/catherine.jpg" alt="Speaker 1">
@@ -80,13 +90,12 @@
           </div>
         </a>
 
-        <!--<a href="https://scoop.iwr.uni-heidelberg.de/team/eloayza/" target="_blank">-->
-        <a href=" https://pureportal.strath.ac.uk/en/persons/karen-estefania-loayza-romero" target="_blank">
+        <a href="https://alisonramage.github.io/" target="_blank">
           <div class="speaker">
-            <img src="../images/estefanial.jpg" alt="Speaker 2">
-            <h3>Dr. Estefania Loayza R.</h3>
+            <img src="../images/Alison_small.jpeg" alt="Speaker 1">
+            <h3>Dr. Alison Ramage</h3>
             <h3>University of Strathclyde</h3>
-            <p>Topic: PDE-Constrained Optimization</p>
+            <p>Topic: High-Dimensional PDEs</p>
           </div>
         </a>
 
@@ -117,16 +126,6 @@
             <p>Topic: Data Assimilation</p>
           </div>
         </a>
-
-        <!--<a href="https://people.epfl.ch/fabio.nobile" target="_blank">
-          <div class="speaker">
-            <img src="../images/Fabio.jpg" alt="Speaker 2">
-            <h3>Prof. Fabio Nobile</h3>
-            <h3>EPFL</h3>
-            <p>Topic: High-Dimensional PDEs</p>
-          </div>
-        </a>-->
-
 
       </div>
     </div>
@@ -204,7 +203,7 @@
 
           <tr>
             <td>15:30 - 17:00</td>
-            <td>TBC</td>
+            <td>Alison Ramage</td>
             <td>-</td>
             <td>ECR Talks</td>
             <td>-</td>
