--- a/sections/information.html
+++ b/sections/information.html
@@ -93,11 +93,14 @@
     <div class="container">
       <h2>Accommodation and places to visit</h2>
 
-      <p>There will be information on accommodation here...</p>
+      <b>Accommodation</b>
+      <p>We recommend that you try to find accommodation as soon as possible because the Royal Highland Show will take place from June 19th to June 22nd, making it harder to find accommodation. We will be posting some accommodation suggestions here later on.</p>      
       
-      <p>There's a bunch of great options for dinner in the area, including:<br>Wee Greek Kitchen, Haldi, Salisbury Arms, Old Bell Inn, Matto Pizza, Korean BBQ, Verdo, Sofia's Lounge, Brass Monkey, and Leslie's Bar.
+      <b>Meals</b>
+      <p>There are plenty of great options for dinner in the area, including:<br>Wee Greek Kitchen, Haldi, Salisbury Arms, Old Bell Inn, Matto Pizza, Korean BBQ, Verdo, Sofia's Lounge, Brass Monkey, and Leslie's Bar.
       </p>
       
+      <b>Tour around Edinburgh</b>
       <p>On Wednesday afternoon, we plan to go for a small tour of Edinburgh. In case you can't join/want to explore Edinburgh on your own, here are some suggestions:
       </p>
       <ul>
