--- a/sections/register.html
+++ b/sections/register.html
@@ -29,8 +29,8 @@
   <section id="sec" class="section">
     <div class="container">
       <h2>Travel and childcare support</h2>
-      <p>Limited funding is available to cover accommodation and travel expenses. To qualify, you need to be an early-career researcher, and be affiliated to an institution in the UK or the EU.
-      To apply, please let us know during registration and send your CV and a short motivation to <a href="mailto:npde25.summerschool@ed.ac.uk">npde25.summerschool@ed.ac.uk</a>.</p>
+      <p>Limited funding is available to cover accommodation and travel expenses. To qualify, you must be an early-career researcher, and affiliated with an institution in the UK or the EU.
+      To apply, please indicate your interest during registration and send your CV and a short motivation statement to <a href="mailto:npde25.summerschool@ed.ac.uk">npde25.summerschool@ed.ac.uk</a>.</p>
       <p>A portion of our funding is dedicated to covering childcare costs incurred while attending the summer school. Please indicate during the registration process whether you'd like to apply for support.</p>
       
       <h2>Registration</h2>
@@ -42,6 +42,8 @@
           </a>
         </div>
       </p>
+      <p style="font-size: 1.2em;"><b>The deadline for general registration is May 2, 2025, and the deadline to be considered for travel support is April 4, 2025.</b></p>
+
       
       <h2>Conference dinner</h2>
       <p>While lunch is provided by the summer school, the conference dinner is not covered by registration fees. We anticipate the cost to attend to be £40-£50 (TBC).</p>
