change link for registration

--- a/sections/register.html
+++ b/sections/register.html
@@ -37,7 +37,7 @@
       <p>Please register via this form:
         <br>
         <div class="btn-container">
-          <a href="https://docs.google.com/forms/d/e/1FAIpQLSdgdzJhrTHCOkEom6Kq9bahwct2P57McXYVJ3BV2oTUkwXyAw/viewform?usp=dialog" target="_blank" class="btn">
+          <a href="https://forms.gle/3sQWkzsMeaMphnjb9" target="_blank" class="btn">
             Register
           </a>
         </div>
