--- a/sections/register.html
+++ b/sections/register.html
@@ -29,7 +29,7 @@
   <section id="sec" class="section">
     <div class="container">
       <h2>Travel and childcare support</h2>
-      <p>Limited funding is available to cover accommodation and travel expenses. To qualify, you must be an early-career researcher, and affiliated with an institution in the UK or the EU.
+      <p>Limited funding is available to cover accommodation and travel expenses. To qualify, you must be an early-career researcher, and affiliated with an institution in the UK or the EU, and give a talk or present a poster at the summer school.
       To apply, please indicate your interest during registration and send your CV and a short motivation statement to <a href="mailto:npde25.summerschool@ed.ac.uk">npde25.summerschool@ed.ac.uk</a>.</p>
       <p>A portion of our funding is dedicated to covering childcare costs incurred while attending the summer school. Please indicate during the registration process whether you'd like to apply for support.</p>
       
